--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 @import url('./assets/styles/globals.css') all;
 @import url('./assets/styles/utilities.css') all;
 @import url('./assets/styles/layouts.css') all;
+@import url('./assets/styles/navigation.css') all;
 @import url('./assets/styles/workspace.css') all;
