--- a/src/assets/styles/workspace.css
+++ b/src/assets/styles/workspace.css
@@ -1,7 +1,46 @@
+#workspace {
+	max-width: 1000px;
+	width: fit-content;
+	align-content: flex-start;
+}
+
+.player-wrapper {
+	display: grid;
+	align-items: center;
+	gap: 1rem;
+	padding: 1rem 0;
+}
+
+.player-wrapper audio {
+	width: 100%;
+	min-width: 350px;
+}
+
+.player-wrapper button {
+	min-width: 200px;
+	height: 100%;
+}
+
 .loop-checkbox {
 	display: none;
 }
 
 .loop-proxy.active {
 	background-color: var(--warning);
+}
+
+@media screen and (min-width: 600px) {
+	.player-wrapper {
+		display: flex;
+	}
+
+	.player-wrapper audio {
+		min-width: 450px;
+	}
+}
+
+@media screen and (min-width: 900px) {
+	.player-wrapper audio {
+		min-width: 600px;
+	}
 }
