--- a/src/assets/styles/layouts.css
+++ b/src/assets/styles/layouts.css
@@ -1,13 +1,13 @@
 body {
 	display: grid;
-	gap: 1rem;
 }
 
 main {
 	display: grid;
-	gap: 1rem;
-	padding: 2rem;
-	justify-items: center;
+	gap: 2rem;
+	padding: 1rem;
+	margin: 0 auto;
+	width: 100%;
 }
 
 section {
@@ -17,7 +17,7 @@ section {
 
 ul {
 	display: grid;
-	gap: .5rem;
+	gap: 2rem;
 	padding: 0;
 	margin: 0;
 	list-style: none;
@@ -25,20 +25,45 @@ ul {
 
 li {
 	display: grid;
-	grid-template-columns: auto 1fr 1fr 2fr;
-	gap: 1rem;
+	grid-template-columns: auto 1fr 1fr;
+	gap: .5rem;
+}
+
+input[type="text"] {
+	grid-column: 1 / -1;
+	max-width: 400px;
 }
 
 .song-header {
 	display: grid;
-	grid-template-columns: auto auto;
 	justify-content: flex-start;
 	align-items: center;
-	gap: 1rem;
 }
 
 @media (min-width: 600px) {
 	body {
 		grid-template-columns: 300px 1fr;
+	}
+
+	main {
+		padding: 2rem;
+	}
+
+	ul {
+		gap: .5rem;
+	}
+
+	li {
+		grid-template-columns: auto 1fr 1fr 2fr;
+		gap: 1rem;
+	}
+
+	input[type="text"] {
+		grid-column: unset;
+	}
+
+	.song-header {
+		grid-template-columns: auto auto;
+		gap: 1rem;
 	}
 }
