--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,4 @@
 @import url('./assets/styles/layouts.css') all;
 @import url('./assets/styles/navigation.css') all;
 @import url('./assets/styles/workspace.css') all;
+@import url('./assets/styles/notifications.css') all;
