smooth out loading animation

--- a/src/assets/styles/utilities.css
+++ b/src/assets/styles/utilities.css
@@ -17,8 +17,6 @@
 }
 
 body:has(.bandbook-loading) {
-	background-color: rgba(0, 0, 0, 0.5);
-
 	*:not(#bandbook-loading-overlay, #bandbook-loading-overlay *) {
 		display: none;
 	}
@@ -29,32 +27,23 @@ body:has(.bandbook-loading) {
 		place-items: center;
 		width: 100%;
 		height: 100%;
-
-		.spinner {
-			transform-origin: center;
-			animation: spin 1.2s linear infinite;
+		svg {
+			animation: fade-in 250ms linear;
+			scale: 2;
 		}
-		.spinner circle {
-			stroke-linecap: round;
-			animation: woop .8s ease-in-out infinite;
+		circle {
+			transform-origin: 50% 50%;
+			animation: rotate 1s cubic-bezier(0.32, 0.27, 0.41, 1.14) infinite;
+			animation-delay: 250ms;
 		}
 	}
 }
-
-@keyframes spin {
-	100% {transform: rotate(360deg)}
+@keyframes rotate {
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
 }
-@keyframes woop {
-	0% {
-		stroke-dasharray: 0 150;
-		stroke-dashoffset: 0
-	}
-	47.5% {
-		stroke-dasharray: 42 150;
-		stroke-dashoffset: -16
-	}
-	95%, 100% {
-		stroke-dasharray: 42 150;
-		stroke-dashoffset: -59
-	}
+
+@keyframes fade-in {
+	0% { opacity: 0; }
+	100% { opacity: 1; }
 }
