initial modal component

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,4 @@
 @import url('./assets/styles/navigation.css') all;
 @import url('./assets/styles/workspace.css') all;
 @import url('./assets/styles/notifications.css') all;
+@import url('./assets/styles/modal.css') all;
