--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,5 @@
 @import url('./assets/styles/workspace.css') all;
 @import url('./assets/styles/notifications.css') all;
 @import url('./assets/styles/modal.css') all;
+@import url('./assets/styles/edit-song.css') all;
+@import url('./assets/styles/feedback.css') all;
