--- a/src/assets/styles/modal.css
+++ b/src/assets/styles/modal.css
@@ -15,10 +15,9 @@
 		display: grid;
 		grid-template-rows: auto 1fr;
 		position: relative;
-		width: 100%;
-		height: 100%;
-		max-width: 500px;
-		max-height: 500px;
+		width: 90vw;
+		max-width: 1000px;
+		max-height: 90vh;
 		padding: 1rem;
 		background: white;
 		border-radius: 5px;
