update loading spinner, refactor sync manager to all promise based, and begin tidying code

--- a/src/assets/styles/utilities.css
+++ b/src/assets/styles/utilities.css
@@ -29,13 +29,36 @@ body:has(.bandbook-loading) {
 		height: 100%;
 		svg {
 			animation: fade-in 250ms linear;
-			scale: 2;
+			scale: 3;
+			--color1: #ee82ee;
+			--color2: #4b0082;
+			--color3: #0000ff;
+			--color4: #008000;
+			--color5: #ffff00;
+			--color6: #ffa500;
+			--color7: #ff0000;
 		}
 		circle {
+			--delay: 250ms;
+			--time: 1.75s;
+			--bezier: cubic-bezier(0.32, 0.27, 0.41, 1.14);
 			transform-origin: 50% 50%;
-			animation: rotate 1s cubic-bezier(0.32, 0.27, 0.41, 1.14) infinite;
-			animation-delay: 250ms;
+			animation: rotate var(--time) var(--bezier) infinite;
+			animation-delay: var(--delay);
+
+			fill: none;
+			stroke-width: 2;
 		}
+		circle:nth-of-type(2n) {
+			animation-direction: reverse;
+			--delay: 500ms;
+			--time: 3.5s;
+		}
+		circle:nth-of-type(3) { --time: 2.75s; }
+		circle:nth-of-type(4) { --time: 2.5s; }
+		circle:nth-of-type(5) { --time: 3.25s; }
+		circle:nth-of-type(6) { --time: 3.75s; }
+		circle:nth-of-type(7) { --time: 2.25s; }
 	}
 }
 @keyframes rotate {
