--- a/src/assets/styles/globals.css
+++ b/src/assets/styles/globals.css
@@ -39,6 +39,7 @@ body {
 	line-height: 1.6;
 	color: var(--text-neutral);
 	background-color: var(--background-neutral);
+	min-height: 100vh;
 }
 
 h1 {
