--- a/src/assets/styles/modal.css
+++ b/src/assets/styles/modal.css
@@ -1,15 +1,18 @@
-.modal {
+dialog.modal {
+	max-width: 100%;
+	max-height: 100%;
+	width: 100%;
+	height: 100%;
 	display: grid;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    place-items: center;
-    border: none;
-    background: rgba(0,0,0,0.5);
-	padding: 2rem;
-	z-index: 1000;
+	place-items: center;
+	margin: 0;
+	padding: 0;
+	border: none;
+	background-color: transparent;
+
+	&::backdrop {
+		background-color: rgba(0, 0, 0, 0.4);
+	}
 
 	.modal-content {
 		display: grid;
@@ -27,15 +30,15 @@
 			display: grid;
 			grid-template-columns: 1fr auto;
 			align-items: flex-start;
-
+	
 			h2 {
 				margin-top: .5rem;
 			}
-
+	
 			.close {
 				background: transparent;
 				padding: 0;
-
+	
 				&:hover {
 					cursor: pointer;
 					font-weight: bold;
