--- a/src/assets/styles/edit-asset.css
+++ b/src/assets/styles/edit-asset.css
@@ -28,3 +28,32 @@ h2:has(.edit-asset-title) {
 	display: grid;
 	gap: 1rem;
 }
+
+.time-proxy-wrapper {
+	display: grid;
+	justify-content: start;
+	grid-template-areas: 
+		"input increment"
+		"input decrement";
+
+	input {
+		grid-area: input;
+	}
+
+	button {
+		font-size: 10px;
+		width: 42px;
+	}
+
+	button:nth-of-type(1) {
+		grid-area: increment;
+	}
+
+	button:nth-of-type(2) {
+		grid-area: decrement;
+	}
+
+	.error {
+		grid-area: error;
+	}
+}
