a few small fixes

--- a/src/assets/styles/layouts.css
+++ b/src/assets/styles/layouts.css
@@ -55,7 +55,7 @@ input[type="text"] {
 	}
 
 	li {
-		grid-template-columns: auto 1fr 1fr 2fr;
+		grid-template-columns: auto 1fr 2fr 1fr 1fr;
 		gap: 1rem;
 	}
 
