--- a/src/assets/styles/layouts.css
+++ b/src/assets/styles/layouts.css
@@ -24,7 +24,7 @@ section {
 	
 	li {
 		display: grid;
-		grid-template-columns: auto 1fr;
+		grid-template-columns: auto auto 1fr;
 		gap: .5rem;
 		justify-content: flex-start;
 	}
