--- a/src/assets/styles/feedback.css
+++ b/src/assets/styles/feedback.css
@@ -8,6 +8,7 @@ button.feedback {
 	height: 4rem;
 	border-radius: 50%;
 	z-index: 1000;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 
 	svg {
 		scale: 1.5;
