format new clip times; refine song nav styles a little

--- a/src/assets/styles/navigation.css
+++ b/src/assets/styles/navigation.css
@@ -11,4 +11,18 @@
 		border: 1px solid var(--secondary);
 		margin: 1rem;
 	}
+
+	.song-nav-item {
+		display: grid;
+		grid-template-columns: 1fr auto auto;
+		gap: 1rem;
+
+		&:has(h3:not(:empty)) > button:first-of-type {
+			display: none;
+		}
+
+		h3:empty {
+			display: none;
+		}
+	}
 }
