--- a/src/assets/styles/layouts.css
+++ b/src/assets/styles/layouts.css
@@ -70,6 +70,11 @@ section {
 	
 		> li {
 			grid-template-columns: 20px auto 1fr auto auto;
+			padding: 1rem;
+
+			&.active {
+				background-color: color-mix(in srgb, var(--info) 30%, transparent 70%);
+			}
 		}
 	
 		input[type="text"] {
