add message when new settings require refresh

--- a/src/assets/styles/notifications.css
+++ b/src/assets/styles/notifications.css
@@ -61,3 +61,13 @@
 		color: var(--danger);
 	}
 }
+
+.inline-notification.refresh-required-message {
+	display: none;
+}
+
+body:has(.settings-require-refresh) {
+	.inline-notification.refresh-required-message {
+		display: block;
+	}
+}
