--- a/src/assets/styles/modal.css
+++ b/src/assets/styles/modal.css
@@ -25,6 +25,7 @@ dialog.modal {
 		background: white;
 		border-radius: 5px;
 		box-shadow: 0 0 10px rgba(0,0,0,0.5);
+		overflow: auto;
 
 		header {
 			display: grid;
