--- a/src/styles.css
+++ b/src/styles.css
@@ -8,3 +8,4 @@
 @import url('./assets/styles/modal.css') all;
 @import url('./assets/styles/edit-asset.css') all;
 @import url('./assets/styles/feedback.css') all;
+@import url('./assets/styles/settings.css') all;
