--- a/src/assets/styles/layouts.css
+++ b/src/assets/styles/layouts.css
@@ -1,13 +1,14 @@
 body {
 	display: grid;
+	width: 100%;
 }
 
 main {
 	display: grid;
 	gap: 2rem;
-	padding: 1rem;
 	margin: 0 auto;
 	width: 100%;
+	max-width: 100vw;
 }
 
 section {
@@ -33,7 +34,7 @@ section {
 	
 	> li {
 		display: grid;
-		grid-template-columns: auto auto 1fr;
+		grid-template-columns: auto auto 1fr auto auto;
 		gap: .5rem;
 		justify-content: flex-start;
 	}
