--- a/src/assets/styles/elements.css
+++ b/src/assets/styles/elements.css
@@ -29,7 +29,7 @@ button, .btn {
 	place-items: center;
 }
 
-*:is(button, a):has(.icon) {
+*:is(button, a, label):has(.icon) {
 	padding: 0;
 	width: 50px;
 	height: 50px;
