--- a/src/assets/styles/layouts.css
+++ b/src/assets/styles/layouts.css
@@ -26,15 +26,33 @@ section {
 	}
 }
 
+.segment-controls {
+	padding-block-end: 2rem;
+
+	.segment-buttons-wrapper {
+		display: flex;
+		gap: .5rem;
+	}
+
+	&:has(> p:empty) .segment-buttons-wrapper {
+		display: none;
+	}
+}
+
+label[for="loop-checkbox"] {
+	width: 50px;
+	height: 50px;
+}
+
 .markers-list {
 	display: grid;
 	gap: 2rem;
 	padding: 0;
 	margin: 0;
-	
+
 	> li {
 		display: grid;
-		grid-template-columns: auto auto 1fr auto auto;
+		grid-template-columns: 20px auto max(160px, 30vw) 50px 50px;
 		gap: .5rem;
 		justify-content: flex-start;
 	}
@@ -80,7 +98,6 @@ section {
 		}
 	
 		> li {
-			grid-template-columns: 20px auto 1fr auto auto;
 			padding: 1rem;
 
 			&.active {
