hide segment controls when no markers (and up version)

--- a/src/assets/styles/layouts.css
+++ b/src/assets/styles/layouts.css
@@ -39,6 +39,10 @@ section {
 	}
 }
 
+.segment-controls:has(+ .markers-list:is(:empty)) {
+	display: none;
+}
+
 label[for="loop-checkbox"] {
 	width: 50px;
 	height: 50px;
