--- a/src/assets/styles/elements.css
+++ b/src/assets/styles/elements.css
@@ -34,3 +34,7 @@ button, .btn {
 	width: 50px;
 	height: 50px;
 }
+
+body:has(main.light) *:is(button, a, label):has(.icon) img {
+	filter: invert(1);
+}
