--- a/src/assets/styles/globals.css
+++ b/src/assets/styles/globals.css
@@ -21,6 +21,15 @@
 	--background-neutral: var(--white);
 	--text-neutral: var(--black);
 
+	--filter-to-yellow:
+		invert(73%)
+		sepia(86%)
+		saturate(1349%)
+		hue-rotate(350deg)
+		brightness(103%)
+		contrast(106%);
+	--filter-to-accent: var(--filter-to-yellow);
+
 	&:has(main.dark) {
 		--background-neutral: var(--black);
 		--text-neutral: var(--white);
